# Rex

./: Cargo.toml  Makefile  README.md  changelog  release_git
.github/workflows/: rust.yml
mimetype/: application-x-rex-binary.xml  install_mimetype
src/: generator.rs  main.rs  runtime.rs
