[package]
name = "Rex"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.23.0"
tar = "0.4.44"
zstd = "0.13.3"
fs_extra = "1.3"
xz2 = "0.1"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false